--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Fichiers PDF sensibles
+modele_vierge.pdf
+*.pdf
+
+# Fichiers temporaires
+__pycache__/
+*.pyc
+.env
